--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -13,6 +13,7 @@
     display: block;
     margin: 0;
     margin-bottom: 35px;
+    padding: 0 30px;
 
     font-size: 40px;
     font-weight: 300;
