--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -6,10 +6,15 @@
   text-align: center;
 
   @include tablets() {
-    width: 450px;
+    width: 575px;
 
     font-size: 40px;
-    line-height: 45px;
+    line-height: 40px;
+  }
+
+  @include desktop() {
+    font-size: 50px;
+    line-height: 50px;
   }
 }
 
