--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -21,8 +21,13 @@
     line-height: 40px;
 
     &--padding {
-      padding: 0 30px;
+      padding: 0 115px;
     }
+  }
+
+  @include desktop() {
+    font-size: 50px;
+    line-height: 50px;
   }
 }
 
@@ -43,6 +48,7 @@
 
   @include desktop() {
     display: flex;
+    justify-content: space-around;
 
     background-image: none;
   }
@@ -62,8 +68,9 @@
   }
 
   @include desktop() {
+    width: 245px;
     margin-left: 0;
-    padding-top: 340px;
+    padding-top: 355px;
 
     text-align: center;
 
@@ -74,11 +81,11 @@
     &::before {
       content: "";
       position: absolute;
-      right: 9%;
-      top: 58%;
+      top: 285px;
+      left: 0;
 
-      width: 265px;
-      height: 60px;
+      width: 245px;
+      height: 50px;
 
       background-color: #f2f2f2;
       box-shadow: 0 -3px 0 0 #000000;
@@ -91,9 +98,25 @@
   margin-bottom: 15px;
 
   font-size: 18px;
+
+  @include desktop() {
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 30px;
+    color: #000000;
+  }
 }
 
 .information__description {
   margin: 0;
   margin-bottom: 30px;
+
+  @include desktop() {
+    font-size: 18px;
+    line-height: 30px;
+  }
+}
+
+.information__footer {
+  padding: 100px 0;
 }
