--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -31,6 +31,7 @@
 @import "blocks/photo-content.scss";
 @import "blocks/post.scss";
 @import "blocks/photo-editor.scss";
+@import "blocks/scale.scss";
 @import "blocks/buttons.scss";
 
 // blocks form.html
