--- a/source/sass/config/mixins.scss
+++ b/source/sass/config/mixins.scss
@@ -11,8 +11,8 @@
   }
 }
 
-@mixin tablets {
-  @media screen and (min-width: $tablets) {
+@mixin tablet {
+  @media screen and (min-width: $tablet) {
     @content;
   }
 }
