--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -1,7 +1,7 @@
 // Resolutions
 $desktop: 1200px;
 $laptop: 990px;
-$tablets: 660px;
+$tablet: 660px;
 $phones: 320px;
 
 // variables for applying font
