--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -10,7 +10,7 @@
   line-height: 30px;
   text-align: center;
 
-  @include tablets() {
+  @include tablet() {
     width: 545px;
     margin: 0 auto;
 
@@ -25,7 +25,7 @@
 .competition__hidden {
   display: none;
 
-  @include tablets() {
+  @include tablet() {
     display: inline;
   }
 }
@@ -38,7 +38,7 @@
   width: 100%;
   margin: 0 20px;
 
-  @include tablets() {
+  @include tablet() {
     justify-content: space-between;
   }
 }
