--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,7 +2,7 @@
   &--hidden {
     display: none;
 
-    @include tablets() {
+    @include tablet() {
       display: block;
     }
   }
@@ -13,7 +13,7 @@
   flex-direction: column;
   align-items: center;
 
-  @include tablets() {
+  @include tablet() {
     flex-direction: row;
     justify-content: space-between;
   }
@@ -39,7 +39,7 @@
 .copyright__text {
   line-height: 18px;
 
-  @include tablets() {
+  @include tablet() {
     font-size: 18px;
   }
 }
