--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -18,7 +18,7 @@
     display: block;
   }
 
-  @include tablets() {
+  @include tablet() {
     &--active {
       display: flex;
       flex-direction: column-reverse;
@@ -29,7 +29,7 @@
 .reviews__author-info {
   display: none;
 
-  @include tablets() {
+  @include tablet() {
     display: block;
     margin: 0;
   }
@@ -49,7 +49,7 @@
   font-weight: 700;
   line-height: 30px;
 
-  @include tablets() {
+  @include tablet() {
     margin-bottom: 10px;
 
     font-size: 20px;
@@ -65,7 +65,7 @@
 
   line-height: 30px;
 
-  @include tablets() {
+  @include tablet() {
     margin-bottom: 40px;
 
     font-size: 18px;
