Корректирует интерактивные элементы блока photo-editor

--- a/source/sass/blocks/photo-editor.scss
+++ b/source/sass/blocks/photo-editor.scss
@@ -41,18 +41,14 @@
   }
 }
 
-.photo-editor__filter {
-  @include tablet() {
-    display: flex;
-  }
-}
+// .photo-editor__filter {
+//   @include tablet() {
+//     display: flex;
+//   }
+// }
 
 .photo-editor__controls {
   text-align: center;
-}
-
-.photo-editor__list {
-  @include list;
 }
 
 .photo-editor__buttons {
