--- a/source/sass/blocks/post.scss
+++ b/source/sass/blocks/post.scss
@@ -53,12 +53,22 @@
 
   &--panorama {
     background-color: $post-background-color;
+
+    @include tablet() {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
 }
 
 .post__author-name {
   font-style: normal;
   font-weight: 700;
+
+  @include tablet() {
+    order: 1;
+    margin-right: auto;
+  }
 }
 
 .post__time {
@@ -70,6 +80,10 @@
 .post__comment {
   margin: 0;
   margin-bottom: 15px;
+
+  @include tablet() {
+    order: 3;
+  }
 }
 
 .post__like {
@@ -80,4 +94,10 @@
   font-size: 12px;
   color: $post-like-text-color;
   text-transform: uppercase;
+
+  @include tablet() {
+    order: 2;
+    padding-left: 0;
+    padding-right: 30px;
+  }
 }
