--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,3 +1,23 @@
 .header {
-  background-color: rgba($header-background-color, 0.3%);
+  min-height: 462px;
+
+  background-color: #1d2631;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+
+  @include tablet() {
+    min-height: 729px;
+  }
+
+  @include desktop() {
+    min-height: 853px;
+  }
+}
+
+.header__wrapper {
+  @include laptop-min() {
+    width: 940px;
+    margin: 0 auto;
+  }
 }
