Добавляет стилизацию блока store-list

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 // blocks index.html
 @import "blocks/main.scss";
 @import "blocks/intro.scss";
+@import "blocks/store-list.scss";
 @import "blocks/app.scss";
 @import "blocks/link.scss";
 @import "blocks/information.scss";
