--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -7,9 +7,9 @@
   padding-top: 40px;
 }
 
-.main__intro-inner {
-  padding-top: 100px;
-  padding-right: 20px;
-  padding-left: 20px;
-  box-sizing: border-box;
-}
+// .main__intro-inner {
+//   padding-top: 100px;
+//   padding-right: 20px;
+//   padding-left: 20px;
+//   box-sizing: border-box;
+// }
