--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -11,4 +11,36 @@
     padding-right: 0;
     padding-left: 0;
   }
+
+  &--inner, {
+    padding-top: 30px;
+
+    @include tablet() {
+      padding-top: 75px;
+    }
+  }
+}
+
+.intro__title {
+  margin: 0;
+
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 30px;
+  color: $intro-text-color;
+  text-align: center;
+
+  @include tablet() {
+    width: 620px;
+    margin: 0 auto;
+
+    font-size: 50px;
+    line-height: 50px;
+  }
+
+  &--width {
+    @include desktop() {
+      width: 754px;
+    }
+  }
 }
