Приводит блоки app, link, intro, store-list в соответствие с PP

--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -24,11 +24,13 @@
 }
 
 .app__link {
-  margin-bottom: 30px;
+  margin-bottom: 34px;
 }
 
 .app__list {
   @include list;
+  margin: 0 auto;
+  margin-bottom: 14px;
 }
 
 .app__description {
