--- a/source/sass/blocks/store-list.scss
+++ b/source/sass/blocks/store-list.scss
@@ -1,5 +1,6 @@
 .store-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  width: 206px;
 }
