--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,5 +1,5 @@
 .intro {
-  padding-top: 422px;
+  padding-top: 420px;
   padding-right: 20px;
   padding-left: 20px;
 
@@ -43,4 +43,8 @@
       width: 754px;
     }
   }
+}
+
+.intro__download {
+  padding-bottom: 30px;
 }
