--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -41,6 +41,8 @@ $link-decor-color: $white;
 $link-text-action-color: $pink;
 $link-background-action-color: $white;
 
+$slider-bullet-color: $blue;
+
 $tariff-selection-background-color: $white;
 $tariff-selection-header-background-color: $blue;
 $tariff-selection-header-text-color: $white;
