--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,3 +1,38 @@
 .slider {
   overflow: hidden;
 }
+
+.slider__bullets {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.slider__button {
+  padding-right: 12px;
+
+  background-color: transparent;
+  border: none;
+}
+
+.slider__bullet {
+  display: block;
+
+  @include circle(6px, rgba($slider-bullet-color, 0.3%));
+
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba($slider-bullet-color, 0.6%);
+  }
+
+  &:active {
+    background-color: rgba($slider-bullet-color, 0.1%);
+  }
+
+  &--active {
+    background-color: rgba($slider-bullet-color, 0%);
+    border: 3px solid $slider-bullet-color;
+    border-radius: 50%;
+  }
+}
