Приводит шапку сайта в соответствие с PP для планшетной версии

--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -12,12 +12,12 @@
   @include tablet() {
     display: block;
     margin: 0;
-    margin-bottom: 35px;
+    margin-bottom: 33px;
     padding: 0 30px;
 
     font-size: 40px;
     font-weight: 300;
-    line-height: 40px;
+    line-height: 47px;
     color: $app-text-color;
     text-align: center;
   }
@@ -25,12 +25,20 @@
 
 .app__link {
   margin-bottom: 34px;
+
+  @include tablet() {
+    margin-bottom: 48px;
+  }
 }
 
 .app__list {
   @include list;
   margin: 0 auto;
   margin-bottom: 14px;
+
+  @include tablet() {
+    margin-bottom: 28px;
+  }
 }
 
 .app__description {
