--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -37,6 +37,8 @@
   padding-top: 80px;
 
   @include tablet() {
+    position: relative;
+
     padding-bottom: 0;
   }
 
@@ -49,8 +51,6 @@
 }
 
 .information__item {
-  position: relative;
-
   text-align: center;
 
   @include tablet() {
@@ -102,6 +102,12 @@
     height: 278px;
 
     overflow: hidden;
+  }
+
+  @include tablet() {
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 }
 
