--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -4,7 +4,7 @@
   padding-left: 20px;
 
   @include tablet() {
-    padding-top: 100px;
+    padding-top: 91px;
   }
 
   @include laptop-min() {
@@ -47,4 +47,8 @@
 
 .intro__download {
   padding-bottom: 30px;
+
+  @include tablet() {
+    padding-bottom: 110px;
+  }
 }
