--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -19,8 +19,8 @@
   padding: 21px;
 
   @include tablet() {
-    padding-top: 26px;
-    padding-bottom: 42px;
+    padding-top: 27px;
+    padding-bottom: 37px;
   }
 
   @include laptop-min() {
@@ -45,7 +45,8 @@
   border: none;
 
   @include tablet() {
-    top: 25px;
+    top: 40px;
+    right: 16px;
   }
 
   @include laptop-min() {
