--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -17,13 +17,23 @@
 
 .effect__title {
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 11px;
   padding-right: 105px;
 
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   color: $black;
+}
+
+.effect__description {
+  margin: 0;
+  margin-bottom: 10px;
+
+  @include desktop() {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
 
 .effect__link {
