--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,6 +1,11 @@
 .main__price {
-  padding-bottom: 5px;
   padding-top: 92px;
+  padding-bottom: 5px;
+
+  @include tablet() {
+    padding-top: 68px;
+    padding-bottom: 30px;
+  }
 }
 
 .main__contacts {
