Приводит элементы блока footer в соответствие с PP для планшетной версии

--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -83,4 +83,9 @@ $button-background-color: $green;
 $button-action-background-color: $darkgreen;
 $button-disables-background-color: $darkgray;
 
+// variables for applying colors footer
+$social-icon-fill: $pink;
+$social-border-color: $blue;
+
+// variables for applying colors modal
 $modal-title-color: $black;
