Добавлены состояния элементов при наведении и нажатии для блока footer

--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -87,5 +87,8 @@ $button-disables-background-color: $darkgray;
 $social-icon-fill: $pink;
 $social-border-color: $blue;
 
+$copyright-icon-fill: $pink;
+$copyright-icon-fill-hover: $blue;
+
 // variables for applying colors modal
 $modal-title-color: $black;
