--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -6,9 +6,24 @@
   @include circle(46px, transparent);
 
   border: 3px solid rgba($social-border-color, 0.1%);
+
+  &:hover,
+  &:focus {
+    border: 3px solid rgba($social-border-color, 1%);
+  }
+
+  &:active {
+    border: 3px solid rgba($social-border-color, 0.1%);
+  }
+
+  &:active .social-list__icon {
+    fill: rgba($social-icon-fill, 0.3%);
+  }
 }
 
 .social-list__icon {
+  fill: $social-icon-fill;
+
   &--youtube {
     padding-left: 5px;
   }
