--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -49,6 +49,7 @@ $tariff-selection-header-text-color: $white;
 $tariff-selection-border-color: $darkgray;
 
 $contacts-link-text-color: $pink;
+$contacts-link-text-color-hover: $blue;
 
 // variables for applying colors photo.html
 $photo-background-color: $gray;
