--- a/source/sass/blocks/app.scss
+++ b/source/sass/blocks/app.scss
@@ -21,6 +21,13 @@
     color: $app-text-color;
     text-align: center;
   }
+
+  @include laptop-min() {
+    margin-bottom: 52px;
+
+    font-size: 50px;
+    line-height: 59px;
+  }
 }
 
 .app__link {
@@ -28,6 +35,10 @@
 
   @include tablet() {
     margin-bottom: 48px;
+  }
+
+  @include laptop-min() {
+    margin-bottom: 69px;
   }
 }
 
@@ -38,6 +49,10 @@
 
   @include tablet() {
     margin-bottom: 28px;
+  }
+
+  @include laptop-min() {
+    margin-bottom: 47px;
   }
 }
 
