--- a/source/sass/blocks/menu-list.scss
+++ b/source/sass/blocks/menu-list.scss
@@ -9,7 +9,8 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 630px;
+    width: 621px;
+    padding-top: 8px;
 
     border: none;
   }
@@ -52,5 +53,6 @@
     font-weight: 400;
     line-height: 18px;
     text-transform: none;
+    letter-spacing: 0.1px;
   }
 }
