--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -1,5 +1,22 @@
 .information {
+  position: relative;
+
   background-image: linear-gradient(-6deg, $gray 76%, $white 0%);
+
+  @include desktop() {
+    background-image: linear-gradient(-6deg, $gray 59%, $white 0%);
+  }
+
+  &::after {
+    content: "";
+
+    display: block;
+    height: 288px;
+
+    background-image: url("../../img/iphone-screen-mobile@1x.png");
+    background-position: 50% 10px;
+    background-repeat: no-repeat;
+  }
 }
 
 .information__header {
@@ -7,6 +24,10 @@
 
   @include tablet() {
     padding-top: 50px;
+  }
+
+  @include desktop() {
+    padding-top: 69px;
   }
 }
 
@@ -32,7 +53,7 @@
 
   @include desktop() {
     font-size: 50px;
-    line-height: 50px;
+    line-height: 59px;
   }
 }
 
@@ -99,24 +120,6 @@
   @include desktop() {
     font-size: 18px;
     line-height: 30px;
-  }
-}
-
-.information__picture {
-  display: none;
-  padding-top: 10px;
-
-  &--active {
-    display: block;
-    height: 278px;
-
-    overflow: hidden;
-  }
-
-  @include tablet() {
-    position: absolute;
-    bottom: 0;
-    left: 0;
   }
 }
 
