--- a/source/sass/blocks/information.scss
+++ b/source/sass/blocks/information.scss
@@ -3,6 +3,10 @@
 
   background-image: linear-gradient(-6deg, $gray 76%, $white 0%);
 
+  @include tablet() {
+    background-image: linear-gradient(-5deg, $gray 75%, $white 0%);
+  }
+
   @include desktop() {
     background-image: linear-gradient(-6deg, $gray 59%, $white 0%);
   }
@@ -13,9 +17,17 @@
     display: block;
     height: 288px;
 
-    background-image: url("../../img/iphone-screen-mobile@1x.png");
+    background-image: url("../img/iphone-screen-mobile@1x.png");
     background-position: 50% 10px;
     background-repeat: no-repeat;
+
+    @include tablet() {
+      position: absolute;
+      bottom: 394px;
+      left: 19px;
+
+      width: 160px;
+    }
   }
 }
 
