--- a/source/sass/blocks/price.scss
+++ b/source/sass/blocks/price.scss
@@ -1,5 +1,9 @@
 .price {
   background-image: linear-gradient(-5deg, $gray 95%, $white 0%);
+
+  @include tablet() {
+    background-image: linear-gradient(-5deg, $gray 85%, $white 0%);
+  }
 }
 
 .price__toggles {
