Приводит блоки main, price, slider, tariff-selection в соответствие с PP для десктопной версии

--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -6,6 +6,11 @@
     padding-top: 102px;
     padding-bottom: 30px;
   }
+
+  @include desktop() {
+    padding-top: 173px;
+    padding-bottom: 56px;
+  }
 }
 
 .main__contacts {
