--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -36,6 +36,10 @@
     border: 3px solid $slider-bullet-color;
     border-radius: 50%;
   }
+
+  @include desktop() {
+    display: none;
+  }
 }
 
 
@@ -43,14 +47,9 @@
   display: none;
 
   @include desktop() {
-    display: block;
-  }
-
-  &--left {
     position: absolute;
-    top: 219px;
-    left: 26px;
 
+    display: block;
     width: 29px;
     height: 29px;
 
@@ -60,24 +59,31 @@
     border-right: none;
     border-bottom: 2px solid rgba($blue, 0.3%);
     border-left: 2px solid rgba($blue, 0.3%);
+
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      border-bottom: 2px solid rgba($blue, 0.6%);
+      border-left: 2px solid rgba($blue, 0.6%);
+    }
+
+    &:active {
+      border-bottom: 2px solid rgba($blue, 0.1%);
+      border-left: 2px solid rgba($blue, 0.1%);
+    }
+  }
+
+  &--left {
+    top: 219px;
+    left: 26px;
 
     transform: rotate(45deg);
   }
 
   &--right {
-    position: absolute;
     top: 219px;
     right: 26px;
-
-    width: 29px;
-    height: 29px;
-
-    background-color: transparent;
-
-    border-top: none;
-    border-right: none;
-    border-bottom: 2px solid rgba($blue, 0.3%);
-    border-left: 2px solid rgba($blue, 0.3%);
 
     transform: rotate(-135deg);
   }
