--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -15,8 +15,10 @@
   }
 
   @include desktop() {
+    margin-bottom: 55px;
+
     font-size: 50px;
-    line-height: 50px;
+    line-height: 59px;
   }
 }
 
@@ -56,9 +58,14 @@
   @include tablet() {
     margin-bottom: 6px;
   }
+
+  @include desktop() {
+    margin-bottom: 23px;
+  }
 }
 
 .contacts__link {
+  font-style: normal;
   font-size: 24px;
   font-weight: 300;
   line-height: 26px;
@@ -77,5 +84,9 @@
 
       border: none;
     }
+  }
+
+  @include desktop() {
+    line-height: 30px;
   }
 }
