--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -30,10 +30,18 @@
   }
 }
 
+.map__interactive {
+  position: absolute;
+
+  width: 100%;
+  height: 500px;
+}
+
 .map__img {
   position: absolute;
   bottom: 0;
   left: 50%;
+  z-index: -1;
 
   transform: translateX(-50%);
 }
