--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -17,6 +17,10 @@
   padding-top: 45px;
   padding-bottom: 19px;
 
+  @include tablet() {
+    padding-bottom: 0;
+  }
+
   @include desktop() {
     padding-top: 67px;
   }
