Корректирует отображения декоративного треугольника и блока footer в десктопной версии

--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -13,11 +13,12 @@
 .page__footer {
   padding-top: 36px;
 
-  // @include tablet() {
-  //   padding: 34px 0;
-  // }
+  @include tablet() {
+    padding-bottom: 40px;
+  }
 
   @include desktop() {
     padding-top: 70px;
+    padding-bottom: 75px;
   }
 }
