--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -10,14 +10,14 @@
   }
 
   @include desktop() {
-    min-height: 458px;
+    min-height: 501px;
   }
 
-  &::after {
+  &::before {
     content: "";
 
     position: absolute;
-    top: 0;
+    z-index: 10;
 
     width: 100%;
     height: 33px;
@@ -31,6 +31,12 @@
       height: 70px;
 
       background-size: 100% 68px;
+    }
+
+    @include desktop() {
+      height: 124px;
+
+      background-size: 100% 124px;
     }
   }
 }
