Добавляет стилизацию чебкоксов и радиобатонов

--- a/source/sass/config/variables.scss
+++ b/source/sass/config/variables.scss
@@ -75,6 +75,7 @@ $legend-text-color: $pink;
 $form-element-action-color: $blue;
 $form-element-modify-color: $pink;
 $form-element-decor-color: $darkgray;
+$form-element-checked: $pink;
 $form-label-text-color: $pink;
 $form-element-placeholder-color: $blue;
 
