--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -112,10 +112,76 @@
 }
 
 .form__label {
+  position: relative;
+
   padding-left: 70px;
 
   font-size: 18px;
   line-height: 30px;
+
+  cursor: pointer;
+
+  &--checkbox {
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      width: 35px;
+      height: 35px;
+
+      background-color: $white;
+
+      border: 2px solid $form-element-decor-color;
+      border-radius: 2px;
+    }
+
+    &::after {
+      content: "";
+
+      position: absolute;
+      top: 10px;
+      left: 10px;
+
+      width: 20px;
+      height: 8px;
+
+      border-left: solid 2px $form-element-checked;
+      border-bottom: solid 2px $form-element-checked;
+
+      transform: rotate(-45deg);
+
+      opacity: 0;
+    }
+  }
+
+  &--radio {
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 0;
+      left: 0;
+
+      @include circle(35px, $white);
+
+      border: 2px solid $form-element-decor-color;
+    }
+
+    &::after {
+      content: "";
+
+      position: absolute;
+      top: 12px;
+      left: 12px;
+
+      @include circle(15px, $form-element-checked);
+
+      opacity: 0;
+    }
+  }
 }
 
 .form__textarea {
