Добавляет стилизацию состояние чебкоксов и радиобатонов при фокусе

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -111,6 +111,10 @@
   }
 }
 
+.form__input:focus + .form__label::before {
+  border: 2px solid $form-element-action-color;
+}
+
 .form__label {
   position: relative;
 
