--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -14,7 +14,8 @@
   }
 
   &--inner, {
-    padding-top: 30px;
+    padding-top: 25px;
+    padding-bottom: 52px;
 
     @include tablet() {
       padding-top: 75px;
