--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -6,7 +6,7 @@
 }
 
 .data__item {
-  margin-bottom: 15px;
+  margin-bottom: 16px;
 
   &:last-child {
     margin-bottom: 0;
@@ -31,6 +31,8 @@
 }
 
 .data__label {
+  display: block;
+  margin-bottom: 5px;
   padding-left: 22px;
 
   line-height: 30px;
@@ -53,8 +55,10 @@
 
 .data__input {
   width: 280px;
-  padding: 20px 22px;
+  padding: 18px 20px;
   box-sizing: border-box;
+
+  font: inherit;
 
   border: 2px solid $form-element-decor-color;
   border-radius: 2px;
