--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -11,7 +11,9 @@
 .footer__wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  min-height: 203px;
 
   @include tablet() {
     flex-direction: row;
