--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,5 +1,10 @@
 .modal {
-  padding-top: 40px;
+  position: fixed;
+  top: 21%;
+  left: 0;
+  right: 0;
+
+  background-color: $white;
 
   box-shadow: 0 9px 25px 5px #e2e2e2;
 
@@ -14,13 +19,21 @@
 }
 
 .modal-error {
+  display: none;
+  padding-top: 40px;
+  padding-bottom: 11px;
+
   @include desktop() {
     background-image: linear-gradient(to bottom, #ffffff 60%, #f2f2f2 60%);
   }
 }
 
 .modal-show {
-  background-image: linear-gradient(to bottom, #ffffff 60%, #f2f2f2 60%);
+  display: none;
+  padding-top: 14px;
+  padding-bottom: 12px;
+
+  background-image: linear-gradient(to bottom, #ffffff 54%, #f2f2f2 54%);
 }
 
 .modal__wrapper {
@@ -44,7 +57,7 @@
 
 .modal__title {
   margin: 0;
-  margin-bottom: 35px;
+  margin-bottom: 26px;
 
   font-size: 18px;
   font-weight: 700;
@@ -54,7 +67,11 @@
 
 .modal__description {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 38px;
 
   text-align: center;
+
+  &--show {
+    margin-bottom: 80px;
+  }
 }
