--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -18,7 +18,8 @@
     padding-bottom: 52px;
 
     @include tablet() {
-      padding-top: 75px;
+      padding-top: 69px;
+      padding-bottom: 81px;
     }
   }
 }
@@ -37,7 +38,7 @@
     margin: 0 auto;
 
     font-size: 50px;
-    line-height: 50px;
+    line-height: 59px;
   }
 
   &--width {
