--- a/source/sass/blocks/competition.scss
+++ b/source/sass/blocks/competition.scss
@@ -2,6 +2,10 @@
   padding-top: 45px;
   padding-right: 20px;
   padding-left: 20px;
+
+  @include tablet() {
+    padding-top: 92px;
+  }
 }
 
 .competition__description {
