--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -17,13 +17,15 @@
     align-items: center;
     margin-bottom: 52px;
 
-    &--position {
+    &--contacts {
       flex-wrap: wrap;
+
+      margin-bottom: 29px;
     }
   }
 
   @include desktop() {
-    &--position {
+    &--contacts {
       margin: 0;
       flex-basis: 373px;
     }
@@ -45,10 +47,11 @@
     margin-right: 19px;
     padding: 0;
 
-    &--order {
+    &--contacts {
       flex-basis: 100%;
       order: 1;
       margin-right: 0;
+      padding-top: 9px;
       padding-left: 20px;
     }
   }
@@ -56,7 +59,7 @@
 
 .data__input {
   width: 280px;
-  padding: 18px 20px;
+  padding: 18px;
   box-sizing: border-box;
 
   font: inherit;
@@ -66,6 +69,10 @@
 
   @include tablet() {
     flex-grow: 1;
+
+    &--contacts {
+      background-image: linear-gradient(to right, $white 88%, $darkgray 88%);
+    }
   }
 
   &:hover,
