--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-wrap: wrap;
 
-  background-image: linear-gradient(to bottom, #ffffff 19%, #f2f2f2 19%, #f2f2f2 49%, #ffffff 49%, #ffffff 62%, #f2f2f2 62%, #f2f2f2 78%, #ffffff 78%);
+  background-image: linear-gradient(to bottom, $white 19%, $gray 19%, $gray 49%, $white 49%, $white 62%, $gray 62%, $gray 78%, $white 78%);
 
   @include tablet() {
-    background-image: linear-gradient(to bottom, #ffffff);
+    background-image: linear-gradient(to bottom, $white);
   }
 
   @include desktop() {
@@ -27,18 +27,6 @@
     // padding: 40px 60px;
 
     border: 2px solid $fieldset-border-color;
-
-    &--user {
-      order: -3;
-    }
-
-    &--app {
-      order: -2;
-    }
-
-    &--contacts {
-      order: -1;
-    }
   }
 
   @include desktop() {
@@ -62,6 +50,8 @@
     border: none;
 
     @include tablet() {
+      order: -3;
+
       padding-top: 70px;
     }
   }
@@ -70,12 +60,23 @@
     padding-top: 43px;
   }
 
-  // &--contacts {
-  // }
+  &--contacts {
+    @include tablet() {
+      order: -1;
+
+      padding: 37px 58px 27px 58px;
+    }
+  }
 
   &--app {
     padding-top: 39px;
-    margin-bottom: 85px;
+    margin-bottom: 57px;
+
+    @include tablet() {
+      order: -2;
+
+      padding: 48px 30px 59px 58px;
+    }
   }
 
   &--comment {
@@ -136,7 +137,7 @@
 .form__label {
   position: relative;
 
-  padding-left: 70px;
+  padding-left: 59px;
 
   font-size: 18px;
   line-height: 30px;
