--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -75,7 +75,7 @@
     padding-top: 16px;
 
     @include tablet() {
-      margin-bottom: 67px;
+      margin-bottom: 68px;
       padding: 37px 58px 44px 58px;
     }
   }
@@ -281,6 +281,10 @@
 
 .form__button {
   margin-bottom: 35px;
+
+  @include tablet() {
+    margin-bottom: 0;
+  }
 }
 
 .form__description {
